--- a/menu.html
+++ b/menu.html
@@ -42,24 +42,35 @@
       border-radius: 10px;
       box-shadow: 0 2px 10px rgba(0, 0, 0, 0.1); /* Subtle shadow for modern look */
     }
+    .menu-item {
+      background-color: #fff;
+      border-radius: 5px;
+      padding: 15px;
+      margin-bottom: 10px;
+      box-shadow: 0 2px 8px rgba(0, 0, 0, 0.1); /* Soft shadow for a polished look */
+      cursor: pointer;
+      transition: background-color 0.3s ease;
+    }
+    .menu-item:hover {
+      background-color: #f1faee;
+    }
+    .menu-item h4 {
+      margin: 0;
+      font-size: 1.5rem;
+      color: #e63946;
+      font-weight: bold;
+    }
+    .menu-description {
+      display: none;
+      padding-top: 10px;
+      font-size: 1rem;
+      color: #555;
+    }
     .highlight {
       background: #fffdde;
       border-left: 5px solid #e63946;
       padding: 1rem;
       margin: 1rem 0;
-    }
-    .menu-item {
-      display: flex;
-      justify-content: space-between;
-      padding: 10px;
-      border-bottom: 1px solid #ccc;
-    }
-    .menu-item:last-child {
-      border-bottom: none;
-    }
-    .menu-item h4 {
-      font-weight: bold;
-      color: #e63946;
     }
     footer {
       background: #f1faee;
@@ -84,42 +95,86 @@
   <!-- Menu Section -->
   <section id="menu">
     <h2>Our Menu</h2>
-    <div class="menu-item">
+
+    <div class="menu-item" onclick="toggleDescription('tacos-description')">
       <h4>Tacos al Pastor</h4>
       <p>$12.99</p>
+      <div id="tacos-description" class="menu-description">
+        A traditional Mexican taco with marinated pork, pineapple, cilantro, and onion served on soft corn tortillas.
+      </div>
     </div>
-    <div class="menu-item">
+
+    <div class="menu-item" onclick="toggleDescription('burrito-description')">
       <h4>Carne Asada Burrito</h4>
       <p>$10.99</p>
+      <div id="burrito-description" class="menu-description">
+        A large burrito filled with tender carne asada, rice, beans, cheese, and fresh salsa wrapped in a flour tortilla.
+      </div>
     </div>
-    <div class="menu-item">
+
+    <div class="menu-item" onclick="toggleDescription('enchiladas-description')">
       <h4>Enchiladas Verdes</h4>
       <p>$13.99</p>
+      <div id="enchiladas-description" class="menu-description">
+        Corn tortillas stuffed with chicken, topped with a tangy green tomatillo sauce, and baked with cheese.
+      </div>
     </div>
-    <div class="menu-item">
+
+    <div class="menu-item" onclick="toggleDescription('chiles-description')">
       <h4>Chiles Rellenos</h4>
       <p>$14.99</p>
+      <div id="chiles-description" class="menu-description">
+        Roasted poblano peppers stuffed with cheese and meat, then battered and fried, served with rice and beans.
+      </div>
     </div>
-    <div class="menu-item">
+
+    <div class="menu-item" onclick="toggleDescription('quesadilla-description')">
       <h4>Quesadilla Supreme</h4>
       <p>$9.99</p>
+      <div id="quesadilla-description" class="menu-description">
+        A crispy flour tortilla filled with cheese, grilled to perfection, and served with guacamole and sour cream.
+      </div>
     </div>
-    <div class="menu-item">
+
+    <div class="menu-item" onclick="toggleDescription('elote-description')">
       <h4>Elote (Mexican Street Corn)</h4>
       <p>$4.99</p>
+      <div id="elote-description" class="menu-description">
+        Grilled corn on the cob slathered with creamy mayonnaise, cotija cheese, chili powder, and a squeeze of lime.
+      </div>
     </div>
-    <div class="menu-item">
+
+    <div class="menu-item" onclick="toggleDescription('sopa-description')">
       <h4>Sopa de Lima (Lime Soup)</h4>
       <p>$8.99</p>
+      <div id="sopa-description" class="menu-description">
+        A flavorful chicken broth soup made with fresh lime, chicken, crispy tortilla strips, and cilantro.
+      </div>
     </div>
-    <div class="menu-item">
+
+    <div class="menu-item" onclick="toggleDescription('guacamole-description')">
       <h4>Guacamole & Chips</h4>
       <p>$5.99</p>
+      <div id="guacamole-description" class="menu-description">
+        Creamy avocado mixed with onions, tomatoes, cilantro, and lime, served with crispy tortilla chips.
+      </div>
     </div>
   </section>
 
   <footer>
     <p>&copy; 2025 Riviera Maya Mexican Restaurant</p>
   </footer>
+
+  <script>
+    // Toggle the visibility of the description
+    function toggleDescription(id) {
+      const description = document.getElementById(id);
+      if (description.style.display === 'block') {
+        description.style.display = 'none';
+      } else {
+        description.style.display = 'block';
+      }
+    }
+  </script>
 </body>
 </html>
