--- a/index.html
+++ b/index.html
@@ -77,12 +77,12 @@
     }
     iframe {
       width: 100%;
-      height: 300px;
+      height: 350px;
       border-radius: 10px;
     }
     .contact-us {
       position: absolute;
-      bottom: 0;
+      bottom: 20px;
       width: 100%;
       background: #e63946;
       border-radius: 10px;
