--- a/index.html
+++ b/index.html
@@ -84,11 +84,16 @@
       position: absolute;
       bottom: 20px;
       width: 100%;
-      background: #e63946;
+      background: #f1faee;
       border-radius: 10px;
       padding: 1.5rem;
       box-shadow: 0 2px 10px rgba(0, 0, 0, 0.1);
-      color: white;
+      color: #333;
+    }
+    .contact-us h3 {
+      margin-bottom: 1rem;
+      font-size: 1.25rem;
+      font-weight: bold;
     }
     .contact-us form input, .contact-us form textarea {
       width: 100%;
@@ -99,8 +104,8 @@
     }
     .contact-us form button {
       padding: 10px 15px;
-      background-color: #f1faee;
-      color: #333;
+      background-color: #e63946;
+      color: white;
       border: none;
       border-radius: 5px;
       cursor: pointer;
@@ -135,7 +140,7 @@
 
   <!-- Find Us Section (with Contact Us merged) -->
   <section id="find-us">
-    <h2>Find Us</h2>
+    <h2 style="padding-left: 2rem;">Find Us</h2>
     <div class="find-us-container">
       <!-- Find Us Left (Address, Phone, Business Hours) -->
       <div class="find-us-left">
@@ -160,7 +165,7 @@
         <h3>Our Location</h3>
         <iframe src="https://www.google.com/maps?q=2861+N+Green+Valley+Pkwy,+Henderson,+NV+89014&output=embed"></iframe>
 
-        <div class="contact-us">
+        <div class="contact-us" style="bottom: 10px;">
           <h3>Contact Us</h3>
           <form>
             <input type="text" placeholder="Your Name" required />
