--- a/index.html
+++ b/index.html
@@ -111,16 +111,19 @@
       max-width: 400px; /* Limit the width */
     }
     .contact-us form button {
-      padding: 10px 15px;
-      background-color: #e63946;
-      color: white;
-      border: none;
-      border-radius: 5px;
-      cursor: pointer;
-      font-size: 16px;
-      width: 100%;
-      max-width: 400px; /* Match the width with other form elements */
-    }
+  padding: 10px 15px;
+  background-color: transparent; /* Change background to transparent */
+  color: #333; /* Adjust text color if needed */
+  border: 1px solid #e63946; /* Add a border if you still want it to have a border */
+  border-radius: 5px;
+  cursor: pointer;
+  font-size: 16px;
+  width: 100%;
+  max-width: 400px;
+}
+
+
+
     footer {
       background: #f1faee;
       color: #333;
