--- a/index.html
+++ b/index.html
@@ -80,50 +80,21 @@
       height: 350px;
       border-radius: 10px;
     }
-    .contact-us {
-      position: absolute;
-      bottom: 20px;
-      width: 100%;
-      background: #f1faee;
+    .contact-us-new {
+      margin-top: 20px;
+      background-color: #f1faee;
       padding: 1.5rem;
       box-shadow: 0 2px 10px rgba(0, 0, 0, 0.1);
-      color: #333;
     }
-    .contact-us h3 {
+    .contact-us-new h3 {
       margin-bottom: 1rem;
       font-size: 1.25rem;
       font-weight: bold;
     }
-    .contact-us form input, .contact-us form textarea {
-      width: 100%;
-      padding: 8px;
-      margin: 0.5rem 0;
-      border-radius: 5px;
-      border: 1px solid #ccc;
-      font-size: 14px;
+    .contact-us-new p {
+      margin-bottom: 1rem;
+      font-size: 1rem;
     }
-    .contact-us form input[type="text"], 
-    .contact-us form input[type="email"] {
-      max-width: 400px; /* Limit the width */
-    }
-    .contact-us form textarea {
-      height: 100px;
-      max-width: 400px; /* Limit the width */
-    }
-    .contact-us form button {
-  padding: 10px 15px;
-  background-color: transparent; /* Change background to transparent */
-  color: #333; /* Adjust text color if needed */
-  border: 1px solid #e63946; /* Add a border if you still want it to have a border */
-  border-radius: 5px;
-  cursor: pointer;
-  font-size: 16px;
-  width: 100%;
-  max-width: 400px;
-}
-
-
-
     footer {
       background: #f1faee;
       color: #333;
@@ -172,21 +143,19 @@
         </ul>
       </div>
 
-      <!-- Find Us Right (Google Map & Contact Us) -->
+      <!-- Find Us Right (Google Map) -->
       <div class="find-us-right">
         <h3>Our Location</h3>
         <iframe src="https://www.google.com/maps?q=2861+N+Green+Valley+Pkwy,+Henderson,+NV+89014&output=embed"></iframe>
-
-        <div class="contact-us" style="bottom: 10px;">
-          <h3>Contact Us</h3>
-          <form>
-            <input type="text" placeholder="Your Name" required />
-            <input type="email" placeholder="Your Email" required />
-            <textarea rows="4" placeholder="Your Message"></textarea>
-            <button type="submit">Send Message</button>
-          </form>
-        </div>
       </div>
+    </div>
+
+    <!-- New Contact Us Section Below the Map -->
+    <div class="contact-us-new">
+      <h3>Contact Us</h3>
+      <p>If you have any questions or feedback, feel free to reach out to us!</p>
+      <p>Email: info@riviera-maya.com</p>
+      <p>Phone: (702) 555-1234</p>
     </div>
   </section>
 
