--- a/index.html
+++ b/index.html
@@ -80,21 +80,6 @@
       height: 350px;
       border-radius: 10px;
     }
-    .contact-us-new {
-      margin-top: 20px;
-      background-color: #f1faee;
-      padding: 1.5rem;
-      box-shadow: 0 2px 10px rgba(0, 0, 0, 0.1);
-    }
-    .contact-us-new h3 {
-      margin-bottom: 1rem;
-      font-size: 1.25rem;
-      font-weight: bold;
-    }
-    .contact-us-new p {
-      margin-bottom: 1rem;
-      font-size: 1rem;
-    }
     footer {
       background: #f1faee;
       color: #333;
@@ -121,16 +106,18 @@
     <p>Located in Henderson, Nevada, Riviera Maya serves vibrant, homemade Mexican dishes made with love. Our colorful plates, warm staff, and authentic recipes bring the taste of Mexico right to your table. Whether you're here for lunch or dinner, you'll find a delicious, satisfying meal in every bite.</p>
   </section>
 
-  <!-- Find Us Section (with Contact Us merged) -->
+  <!-- Find Us Section -->
   <section id="find-us">
     <h2 style="padding-left: 2rem;">Find Us</h2>
     <div class="find-us-container">
-      <!-- Find Us Left (Address, Phone, Business Hours) -->
+      <!-- Find Us Left (Address, Phone, Email, Business Hours) -->
       <div class="find-us-left">
         <h3>Our Address</h3>
         <p>2861 N Green Valley Pkwy, Henderson, NV 89014</p>
         <h3>Phone</h3>
         <p>(702) 555-1234</p>
+        <h3>Email</h3>
+        <p>contact@rivieramayarestaurant.com</p>
         <h3>Business Hours</h3>
         <ul>
           <li>Monday: 2:00 PM – 9:00 PM</li>
@@ -148,14 +135,6 @@
         <h3>Our Location</h3>
         <iframe src="https://www.google.com/maps?q=2861+N+Green+Valley+Pkwy,+Henderson,+NV+89014&output=embed"></iframe>
       </div>
-    </div>
-
-    <!-- New Contact Us Section Below the Map -->
-    <div class="contact-us-new">
-      <h3>Contact Us</h3>
-      <p>If you have any questions or feedback, feel free to reach out to us!</p>
-      <p>Email: info@riviera-maya.com</p>
-      <p>Phone: (702) 555-1234</p>
     </div>
   </section>
 
