--- a/index.html
+++ b/index.html
@@ -80,6 +80,23 @@
       height: 350px;
       border-radius: 10px;
     }
+    .about-us-box {
+      background-color: #f1faee;
+      padding: 1.5rem;
+      margin-top: 2rem;
+      border-radius: 10px;
+      box-shadow: 0 2px 10px rgba(0, 0, 0, 0.1);
+    }
+    .about-us-box h3 {
+      font-size: 1.5rem;
+      margin-bottom: 1rem;
+      font-weight: bold;
+      color: #e63946;
+    }
+    .about-us-box p {
+      font-size: 1rem;
+      color: #333;
+    }
     footer {
       background: #f1faee;
       color: #333;
@@ -100,17 +117,11 @@
     <a href="menu.html">Menu</a>
   </nav>
 
-  <!-- About Us Section -->
-  <section id="about-us">
-    <h2>About Us</h2>
-    <p>Located in Henderson, Nevada, Riviera Maya serves vibrant, homemade Mexican dishes made with love. Our colorful plates, warm staff, and authentic recipes bring the taste of Mexico right to your table. Whether you're here for lunch or dinner, you'll find a delicious, satisfying meal in every bite.</p>
-  </section>
-
-  <!-- Find Us Section -->
+  <!-- Find Us Section (merged with About Us) -->
   <section id="find-us">
     <h2 style="padding-left: 2rem;">Find Us</h2>
     <div class="find-us-container">
-      <!-- Find Us Left (Address, Phone, Email, Business Hours) -->
+      <!-- Find Us Left (Address, Phone, Business Hours) -->
       <div class="find-us-left">
         <h3>Our Address</h3>
         <p>2861 N Green Valley Pkwy, Henderson, NV 89014</p>
@@ -135,6 +146,12 @@
         <h3>Our Location</h3>
         <iframe src="https://www.google.com/maps?q=2861+N+Green+Valley+Pkwy,+Henderson,+NV+89014&output=embed"></iframe>
       </div>
+    </div>
+
+    <!-- About Us Box (below the map) -->
+    <div class="about-us-box">
+      <h3>About Us</h3>
+      <p>This section will provide a brief introduction to the restaurant, including its history, values, and story. More details will be added soon!</p>
     </div>
   </section>
 
