--- a/index.html
+++ b/index.html
@@ -6,6 +6,7 @@
   <title>Riviera Maya Mexican Restaurant</title>
   <link rel="stylesheet" href="styles.css" />
   <style>
+    /* General Styles */
     body {
       margin: 0;
       font-family: 'Segoe UI', Tahoma, Geneva, Verdana, sans-serif;
@@ -48,6 +49,7 @@
       padding: 1rem;
       margin: 1rem 0;
     }
+    /* Find Us Section */
     .find-us-container {
       display: grid;
       grid-template-columns: 1fr 1fr;
@@ -75,27 +77,33 @@
       padding: 1.5rem;
       position: relative;
     }
+    .find-us-right h3 {
+      margin-bottom: 1rem;
+      font-weight: bold;
+      color: #e63946;
+    }
     iframe {
       width: 100%;
       height: 350px;
       border-radius: 10px;
     }
-    .about-us-box {
-      background-color: #f1faee;
-      padding: 1.5rem;
-      margin-top: 2rem;
-      border-radius: 10px;
-      box-shadow: 0 2px 10px rgba(0, 0, 0, 0.1);
+    /* Merged About Us inside Find Us */
+    .about-us-merged {
+      margin-top: 20px;
+      padding: 1rem;
+      /* No background color so it blends with the section */
+      /* Optionally, you could add a subtle border-top if desired: */
+      /* border-top: 1px solid #ddd; */
     }
-    .about-us-box h3 {
-      font-size: 1.5rem;
-      margin-bottom: 1rem;
-      font-weight: bold;
+    .about-us-merged h3 {
+      font-size: 1.25rem;
+      margin-bottom: 0.5rem;
       color: #e63946;
     }
-    .about-us-box p {
+    .about-us-merged p {
       font-size: 1rem;
       color: #333;
+      margin: 0;
     }
     footer {
       background: #f1faee;
@@ -117,11 +125,12 @@
     <a href="menu.html">Menu</a>
   </nav>
 
-  <!-- Find Us Section (merged with About Us) -->
+  <!-- About Us Section (Removed from its own section) -->
+  <!-- Find Us Section -->
   <section id="find-us">
     <h2 style="padding-left: 2rem;">Find Us</h2>
     <div class="find-us-container">
-      <!-- Find Us Left (Address, Phone, Business Hours) -->
+      <!-- Find Us Left (Address, Phone, Email, Business Hours) -->
       <div class="find-us-left">
         <h3>Our Address</h3>
         <p>2861 N Green Valley Pkwy, Henderson, NV 89014</p>
@@ -141,17 +150,17 @@
         </ul>
       </div>
 
-      <!-- Find Us Right (Google Map) -->
+      <!-- Find Us Right (Google Map and Merged About Us) -->
       <div class="find-us-right">
         <h3>Our Location</h3>
         <iframe src="https://www.google.com/maps?q=2861+N+Green+Valley+Pkwy,+Henderson,+NV+89014&output=embed"></iframe>
-      </div>
-    </div>
 
-    <!-- About Us Box (below the map) -->
-    <div class="about-us-box">
-      <h3>About Us</h3>
-      <p>This section will provide a brief introduction to the restaurant, including its history, values, and story. More details will be added soon!</p>
+        <!-- About Us Merged Box Below the Map -->
+        <div class="about-us-merged">
+          <h3>About Us</h3>
+          <p>This section will provide an introduction to the restaurant’s history, values, and vision. More details will be added soon!</p>
+        </div>
+      </div>
     </div>
   </section>
 
