--- a/menu.html
+++ b/menu.html
@@ -3,75 +3,100 @@
 <head>
   <meta charset="UTF-8" />
   <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-  <title>Menu - Riviera Maya Mexican Restaurant</title>
-  <link rel="stylesheet" href="styles.css" />
+  <title>Menu - Riviera Maya</title>
   <style>
+    /* General Styles */
     body {
       margin: 0;
       font-family: 'Segoe UI', Tahoma, Geneva, Verdana, sans-serif;
       background-color: #f4f4f4;
       color: #333;
     }
+
+    /* Header */
     header {
       background: linear-gradient(45deg, #e63946, #f1faee);
-      padding: 2rem;
-      text-align: center;
-      color: white;
-      font-family: 'Brush Script MT', cursive;
-      width: 100%;
+      padding: 1rem 2rem;
+      display: flex;
+      align-items: center;
+      justify-content: center;
       box-sizing: border-box;
     }
+
+    .header-content {
+      display: flex;
+      align-items: center;
+      gap: 20px;
+    }
+
+    .header-content img {
+      height: 80px;
+      width: auto;
+    }
+
+    .header-content h1 {
+      margin: 0;
+      font-size: 2.5rem;
+      color: white;
+      font-family: 'Brush Script MT', cursive;
+    }
+
+    /* Navigation */
     nav {
       background: #f1faee;
       display: flex;
       justify-content: center;
       padding: 1rem;
     }
+
     nav a {
       margin: 0 1rem;
       text-decoration: none;
       color: #333;
       font-weight: bold;
     }
+
+    /* Menu Section */
     section {
-      padding: 2rem 0;
-      max-width: 1200px;
-      margin: 0 auto;
-      width: 90%; /* Adjusting width to make it more compact */
-      background-color: #fff; /* Solid white background for sections */
-      border-radius: 10px;
-      box-shadow: 0 2px 10px rgba(0, 0, 0, 0.1); /* Subtle shadow for modern look */
-    }
-    .menu-item {
+      padding: 2rem;
+      max-width: 1000px;
+      margin: auto;
       background-color: #fff;
-      border-radius: 5px;
-      padding: 15px;
-      margin-bottom: 10px;
-      box-shadow: 0 2px 8px rgba(0, 0, 0, 0.1); /* Soft shadow for a polished look */
-      cursor: pointer;
-      transition: background-color 0.3s ease;
+      border-radius: 10px;
+      box-shadow: 0 2px 10px rgba(0, 0, 0, 0.1);
     }
-    .menu-item:hover {
-      background-color: #f1faee;
+
+    h2 {
+      color: #e63946;
+      margin-top: 0;
     }
+
+    .menu-category {
+      margin-bottom: 2rem;
+    }
+
+    .menu-category h3 {
+      border-bottom: 2px solid #e63946;
+      padding-bottom: 0.5rem;
+      margin-bottom: 1rem;
+      color: #e63946;
+    }
+
+    .menu-item {
+      margin-bottom: 1rem;
+    }
+
     .menu-item h4 {
       margin: 0;
-      font-size: 1.5rem;
-      color: #e63946;
-      font-weight: bold;
+      font-size: 1.1rem;
     }
-    .menu-description {
-      display: none;
-      padding-top: 10px;
-      font-size: 1rem;
+
+    .menu-item p {
+      margin: 0.2rem 0 0;
+      font-size: 0.95rem;
       color: #555;
     }
-    .highlight {
-      background: #fffdde;
-      border-left: 5px solid #e63946;
-      padding: 1rem;
-      margin: 1rem 0;
-    }
+
     footer {
       background: #f1faee;
       color: #333;
@@ -82,99 +107,66 @@
   </style>
 </head>
 <body>
+
+  <!-- Header with Logo and Name -->
   <header>
-    <h1>Riviera Maya Mexican Restaurant</h1>
-    <p>Authentic Flavors from the Heart of Mexico</p>
+    <div class="header-content">
+      <img src="logo.png" alt="Riviera Maya Logo" />
+      <h1>Riviera Maya</h1>
+    </div>
   </header>
-  
+
+  <!-- Navigation -->
   <nav>
     <a href="index.html">Home</a>
     <a href="menu.html">Menu</a>
   </nav>
 
   <!-- Menu Section -->
-  <section id="menu">
+  <section>
     <h2>Our Menu</h2>
 
-    <div class="menu-item" onclick="toggleDescription('tacos-description')">
-      <h4>Tacos al Pastor</h4>
-      <p>$12.99</p>
-      <div id="tacos-description" class="menu-description">
-        A traditional Mexican taco with marinated pork, pineapple, cilantro, and onion served on soft corn tortillas.
+    <div class="menu-category">
+      <h3>Appetizers</h3>
+      <div class="menu-item">
+        <h4>Chips & Salsa</h4>
+        <p>Freshly made chips served with homemade salsa.</p>
+      </div>
+      <div class="menu-item">
+        <h4>Guacamole</h4>
+        <p>Made fresh daily with ripe avocados, lime, and tomato.</p>
       </div>
     </div>
 
-    <div class="menu-item" onclick="toggleDescription('burrito-description')">
-      <h4>Carne Asada Burrito</h4>
-      <p>$10.99</p>
-      <div id="burrito-description" class="menu-description">
-        A large burrito filled with tender carne asada, rice, beans, cheese, and fresh salsa wrapped in a flour tortilla.
+    <div class="menu-category">
+      <h3>Entrees</h3>
+      <div class="menu-item">
+        <h4>Chicken Tacos</h4>
+        <p>Three soft tacos filled with seasoned chicken, lettuce, and cheese.</p>
+      </div>
+      <div class="menu-item">
+        <h4>Carne Asada</h4>
+        <p>Grilled steak served with rice, beans, and warm tortillas.</p>
       </div>
     </div>
 
-    <div class="menu-item" onclick="toggleDescription('enchiladas-description')">
-      <h4>Enchiladas Verdes</h4>
-      <p>$13.99</p>
-      <div id="enchiladas-description" class="menu-description">
-        Corn tortillas stuffed with chicken, topped with a tangy green tomatillo sauce, and baked with cheese.
+    <div class="menu-category">
+      <h3>Desserts</h3>
+      <div class="menu-item">
+        <h4>Churros</h4>
+        <p>Fried dough pastries rolled in cinnamon sugar, served with chocolate sauce.</p>
       </div>
-    </div>
-
-    <div class="menu-item" onclick="toggleDescription('chiles-description')">
-      <h4>Chiles Rellenos</h4>
-      <p>$14.99</p>
-      <div id="chiles-description" class="menu-description">
-        Roasted poblano peppers stuffed with cheese and meat, then battered and fried, served with rice and beans.
-      </div>
-    </div>
-
-    <div class="menu-item" onclick="toggleDescription('quesadilla-description')">
-      <h4>Quesadilla Supreme</h4>
-      <p>$9.99</p>
-      <div id="quesadilla-description" class="menu-description">
-        A crispy flour tortilla filled with cheese, grilled to perfection, and served with guacamole and sour cream.
-      </div>
-    </div>
-
-    <div class="menu-item" onclick="toggleDescription('elote-description')">
-      <h4>Elote (Mexican Street Corn)</h4>
-      <p>$4.99</p>
-      <div id="elote-description" class="menu-description">
-        Grilled corn on the cob slathered with creamy mayonnaise, cotija cheese, chili powder, and a squeeze of lime.
-      </div>
-    </div>
-
-    <div class="menu-item" onclick="toggleDescription('sopa-description')">
-      <h4>Sopa de Lima (Lime Soup)</h4>
-      <p>$8.99</p>
-      <div id="sopa-description" class="menu-description">
-        A flavorful chicken broth soup made with fresh lime, chicken, crispy tortilla strips, and cilantro.
-      </div>
-    </div>
-
-    <div class="menu-item" onclick="toggleDescription('guacamole-description')">
-      <h4>Guacamole & Chips</h4>
-      <p>$5.99</p>
-      <div id="guacamole-description" class="menu-description">
-        Creamy avocado mixed with onions, tomatoes, cilantro, and lime, served with crispy tortilla chips.
+      <div class="menu-item">
+        <h4>Flan</h4>
+        <p>Creamy caramel custard with a rich topping.</p>
       </div>
     </div>
   </section>
 
+  <!-- Footer -->
   <footer>
     <p>&copy; 2025 Riviera Maya Mexican Restaurant</p>
   </footer>
 
-  <script>
-    // Toggle the visibility of the description
-    function toggleDescription(id) {
-      const description = document.getElementById(id);
-      if (description.style.display === 'block') {
-        description.style.display = 'none';
-      } else {
-        description.style.display = 'block';
-      }
-    }
-  </script>
 </body>
 </html>
